v1.1.0/modules/schema/pages/class/SynchronousMachineDynamics.adoc
= `SynchronousMachineDynamics`
:toclevels: 4


+++Synchronous machine whose behaviour is described by reference to a standard model expressed in one of the following forms:
- simplified (or classical), where a group of generators or motors is not modelled in detail;
- detailed, in equivalent circuit form;
- detailed, in time constant reactance form; or
<font color="#0f0f0f">- by definition of a user-defined model.</font>
<font color="#0f0f0f">It is a common practice to represent small generators by a negative load rather than by a dynamic generator model when performing dynamics simulations. In this case, a SynchronousMachine in the static model is not represented by anything in the dynamics model, instead it is treated as an ordinary load.</font>
<font color="#0f0f0f">Parameter details:</font>
<ol>
	<li><font color="#0f0f0f">Synchronous machine parameters such as <i>Xl, Xd, Xp</i> etc. are actually used as inductances in the models,</font> but are commonly referred to as reactances since, at nominal frequency, the PU values are the same. However, some references use the symbol <i>L</i> instead of <i>X</i>.</li>
</ol>+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:SynchronousMachineDynamics`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]
**** *`SynchronousMachineDynamics`*
 ***** xref::class/SynchronousMachineDetailed.adoc[`SynchronousMachineDetailed`]
 ***** xref::class/SynchronousMachineSimplified.adoc[`SynchronousMachineSimplified`]
 ***** xref::class/SynchronousMachineUserDefined.adoc[`SynchronousMachineUserDefined`]


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<CrossCompoundTurbineGovernorDyanmics,`CrossCompoundTurbineGovernorDyanmics`>>
//| [[slots_table.CrossCompoundTurbineGovernorDyanmics]]<<CrossCompoundTurbineGovernorDyanmics,`CrossCompoundTurbineGovernorDyanmics`>>
| 0..1 +
xref::class/CrossCompoundTurbineGovernorDynamics.adoc[`CrossCompoundTurbineGovernorDynamics`]
| +++The cross-compound turbine governor with which this high-pressure synchronous machine is associated.+++
| _n/a_

| <<CrossCompoundTurbineGovernorDynamics,`CrossCompoundTurbineGovernorDynamics`>>
//| [[slots_table.CrossCompoundTurbineGovernorDynamics]]<<CrossCompoundTurbineGovernorDynamics,`CrossCompoundTurbineGovernorDynamics`>>
| 0..1 +
xref::class/CrossCompoundTurbineGovernorDynamics.adoc[`CrossCompoundTurbineGovernorDynamics`]
| +++The cross-compound turbine governor with which this low-pressure synchronous machine is associated.+++
| _n/a_

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
//| [[slots_table.ExcitationSystemDynamics]]<<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 0..1 +
xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model associated with this synchronous machine model.+++
| _n/a_

| <<GenICompensationForGenJ,`GenICompensationForGenJ`>>
//| [[slots_table.GenICompensationForGenJ]]<<GenICompensationForGenJ,`GenICompensationForGenJ`>>
| 0..* +
xref::class/GenICompensationForGenJ.adoc[`GenICompensationForGenJ`]
| +++Compensation of voltage compensator's generator for current flow out of this  generator.+++
| _n/a_

| <<MechanicalLoadDynamics,`MechanicalLoadDynamics`>>
//| [[slots_table.MechanicalLoadDynamics]]<<MechanicalLoadDynamics,`MechanicalLoadDynamics`>>
| 0..1 +
xref::class/MechanicalLoadDynamics.adoc[`MechanicalLoadDynamics`]
| +++Mechanical load model associated with this synchronous machine model.+++
| _n/a_

| <<SynchronousMachine,`SynchronousMachine`>>
//| [[slots_table.SynchronousMachine]]<<SynchronousMachine,`SynchronousMachine`>>
| 1 +
xref::class/SynchronousMachine.adoc[`SynchronousMachine`]
| +++Synchronous machine to which synchronous machine dynamics model applies.+++
| _n/a_

| <<TurbineGovernorDynamics,`TurbineGovernorDynamics`>>
//| [[slots_table.TurbineGovernorDynamics]]<<TurbineGovernorDynamics,`TurbineGovernorDynamics`>>
| 0..* +
xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
| +++Turbine-governor model associated with this synchronous machine model. Multiplicity of greater than one is intended to...+++
| _n/a_

| <<damping,`damping`>>
//| [[slots_table.damping]]<<damping,`damping`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Damping torque coefficient (<i>D</i>) (&gt;= 0).  A proportionality constant that, when multiplied by the angular velocity...+++
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]

| <<inertia,`inertia`>>
//| [[slots_table.inertia]]<<inertia,`inertia`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Inertia constant of generator or motor and mechanical load (<i>H</i>) (&gt; 0).  This is the specification for the stored...+++
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]

| <<saturationFactor,`saturationFactor`>>
//| [[slots_table.saturationFactor]]<<saturationFactor,`saturationFactor`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Saturation factor at rated terminal voltage (<i>S1</i>) (&gt;= 0).  Not used by simplified model.  Defined by defined by...+++
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]

| <<saturationFactor120,`saturationFactor120`>>
//| [[slots_table.saturationFactor120]]<<saturationFactor120,`saturationFactor120`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Saturation factor at 120% of rated terminal voltage (<i>S12</i>) (&gt;= RotatingMachineDynamics.saturationFactor). Not used...+++
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]

| <<statorLeakageReactance,`statorLeakageReactance`>>
//| [[slots_table.statorLeakageReactance]]<<statorLeakageReactance,`statorLeakageReactance`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Stator leakage reactance (<i>Xl</i>) (&gt;= 0). Typical value = 0,15.+++
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]

| <<statorResistance,`statorResistance`>>
//| [[slots_table.statorResistance]]<<statorResistance,`statorResistance`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Stator (armature) resistance (<i>Rs</i>) (&gt;= 0). Typical value = 0,005.+++
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#CrossCompoundTurbineGovernorDyanmics]
=== `CrossCompoundTurbineGovernorDyanmics`
+++The cross-compound turbine governor with which this high-pressure synchronous machine is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.CrossCompoundTurbineGovernorDyanmics`
| Cardinality
| 0..1
| Type
| xref::class/CrossCompoundTurbineGovernorDynamics.adoc[`CrossCompoundTurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.CrossCompoundTurbineGovernorDyanmics,&#10548;>>
--
////


//[discrete]
[#CrossCompoundTurbineGovernorDynamics]
=== `CrossCompoundTurbineGovernorDynamics`
+++The cross-compound turbine governor with which this low-pressure synchronous machine is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.CrossCompoundTurbineGovernorDynamics`
| Cardinality
| 0..1
| Type
| xref::class/CrossCompoundTurbineGovernorDynamics.adoc[`CrossCompoundTurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.CrossCompoundTurbineGovernorDynamics,&#10548;>>
--
////


//[discrete]
[#damping]
=== `damping`
+++Damping torque coefficient (<i>D</i>) (&gt;= 0).  A proportionality constant that, when multiplied by the angular velocity of the rotor poles with respect to the magnetic field (frequency), results in the damping torque.  This value is often zero when the sources of damping torques (generator damper windings, load damping effects, etc.) are modelled in detail.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.damping`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.damping,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model associated with this synchronous machine model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.ExcitationSystemDynamics`
| Cardinality
| 0..1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.ExcitationSystemDynamics,&#10548;>>
--
////


//[discrete]
[#GenICompensationForGenJ]
=== `GenICompensationForGenJ`
+++Compensation of voltage compensator's generator for current flow out of this  generator.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.GenICompensationForGenJ`
| Cardinality
| 0..*
| Type
| xref::class/GenICompensationForGenJ.adoc[`GenICompensationForGenJ`]


|===

////
[.text-left]
--
<<slots_table.GenICompensationForGenJ,&#10548;>>
--
////


//[discrete]
[#inertia]
=== `inertia`
+++Inertia constant of generator or motor and mechanical load (<i>H</i>) (&gt; 0).  This is the specification for the stored energy in the rotating mass when operating at rated speed.  For a generator, this includes the generator plus all other elements (turbine, exciter) on the same shaft and has units of MW x s.  For a motor, it includes the motor plus its mechanical load. Conventional units are PU on the generator MVA base, usually expressed as MW x s / MVA or just s. This value is used in the accelerating power reference frame for operator training simulator solutions.  Typical value = 3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.inertia`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.inertia,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#MechanicalLoadDynamics]
=== `MechanicalLoadDynamics`
+++Mechanical load model associated with this synchronous machine model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.MechanicalLoadDynamics`
| Cardinality
| 0..1
| Type
| xref::class/MechanicalLoadDynamics.adoc[`MechanicalLoadDynamics`]


|===

////
[.text-left]
--
<<slots_table.MechanicalLoadDynamics,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#saturationFactor]
=== `saturationFactor`
+++Saturation factor at rated terminal voltage (<i>S1</i>) (&gt;= 0).  Not used by simplified model.  Defined by defined by <i>S</i>(<i>E1</i>) in the SynchronousMachineSaturationParameters diagram.  Typical value = 0,02.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.saturationFactor`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.saturationFactor,&#10548;>>
--
////


//[discrete]
[#saturationFactor120]
=== `saturationFactor120`
+++Saturation factor at 120% of rated terminal voltage (<i>S12</i>) (&gt;= RotatingMachineDynamics.saturationFactor). Not used by the simplified model, defined by <i>S</i>(<i>E2</i>) in the SynchronousMachineSaturationParameters diagram.  Typical value = 0,12.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.saturationFactor120`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.saturationFactor120,&#10548;>>
--
////


//[discrete]
[#statorLeakageReactance]
=== `statorLeakageReactance`
+++Stator leakage reactance (<i>Xl</i>) (&gt;= 0). Typical value = 0,15.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.statorLeakageReactance`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.statorLeakageReactance,&#10548;>>
--
////


//[discrete]
[#statorResistance]
=== `statorResistance`
+++Stator (armature) resistance (<i>Rs</i>) (&gt;= 0). Typical value = 0,005.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.statorResistance`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.statorResistance,&#10548;>>
--
////


//[discrete]
[#SynchronousMachine]
=== `SynchronousMachine`
+++Synchronous machine to which synchronous machine dynamics model applies.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.SynchronousMachine`
| Cardinality
| 1
| Type
| xref::class/SynchronousMachine.adoc[`SynchronousMachine`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachine,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TurbineGovernorDynamics]
=== `TurbineGovernorDynamics`
+++Turbine-governor model associated with this synchronous machine model. Multiplicity of greater than one is intended to support hydro units that have multiple turbines on one generator.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.TurbineGovernorDynamics`
| Cardinality
| 0..*
| Type
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.TurbineGovernorDynamics,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/CrossCompoundTurbineGovernorDynamics.adoc[`CrossCompoundTurbineGovernorDynamics`] | xref::class/CrossCompoundTurbineGovernorDynamics.adoc#HighPressureSynchronousMachineDynamics[`HighPressureSynchronousMachineDynamics`]



| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`] | xref::class/ExcitationSystemDynamics.adoc#SynchronousMachineDynamics[`SynchronousMachineDynamics`]



| xref::class/GenICompensationForGenJ.adoc[`GenICompensationForGenJ`] | xref::class/GenICompensationForGenJ.adoc#SynchronousMachineDynamics[`SynchronousMachineDynamics`]



| xref::class/MechanicalLoadDynamics.adoc[`MechanicalLoadDynamics`] | xref::class/MechanicalLoadDynamics.adoc#SynchronousMachineDynamics[`SynchronousMachineDynamics`]



| xref::class/SynchronousMachine.adoc[`SynchronousMachine`] | xref::class/SynchronousMachine.adoc#SynchronousMachineDynamics[`SynchronousMachineDynamics`]



| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`] | xref::class/TurbineGovernorDynamics.adoc#SynchronousMachineDynamics[`SynchronousMachineDynamics`]


|===

